[project]
name = "api"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
  "flask >= 3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest >= 8.2.0",
  "python-dev-cli >= 1.1.0",
  "ruff > 0.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.python-dev-cli.scripts]
lint = "ruff check . --config pyproject.toml"
run  = "flask --app api run --debug"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
